--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,14 @@ button {
     padding: 0;
     margin: 0;
 }
+
+input {
+    border: none;
+    outline: none;
+    background: none;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    padding: 0;
+    margin: 0;
+}
