--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: Nino;
-    src: local("Nino"), url("./assets/fonts/bpg-nino-mtavruli.ttf");
+    font-family: Helvetica;
+    src: local("Helvetica"), url("./assets/fonts/HelveticaNeue.ttc");
 }
 *,
 *::before,
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Nino;
+    font-family: Helvetica, sans-serif;
 }
 
 :root {
@@ -21,7 +21,8 @@
     --success: #98e37e;
     --error: #ef5050;
     --home-button: #1c1c1c;
-    --upload-button: #62a1eb;
+    --more-button: #62a1eb;
+    --upload-button: #0e80bf;
     --navigation-button: #6b40e3;
     --header-border: #f93b1d;
     --form-bg: #f9f9f9;
